Swagger fix's
